idea/testData/debugger/sequence/psi/streams/negative/Idea173415.kt
private val runnableSupplier: () -> () -> Unit
  get() =
    <caret>{ { } }

fun main(args: Array<String>) {
}
